--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==2.1.7
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
+psycopg2==2.7.7
 pycodestyle==2.5.0
 pylint==2.2.2
 pytz==2018.9
