--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,4 @@ pytz              2018.9
 setuptools        39.0.1 
 six               1.12.0 
 wrapt             1.11.1 
+django-allauth    0.39.1
