--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
-astroid==2.1.0  
-autopep8==1.4.3  
-Django==2.1.7  
-isort==4.3.4  
-lazy-object-proxy==1.3.1  
-mccabe==0.6.1  
-pip==10.0.1 
-psycopg2==2.7.7  
-pycodestyle==2.5.0  
-pylint==2.2.2  
-pytz==2018.9 
-setuptools==39.0.1 
-six==1.12.0 
+astroid==2.1.0
+autopep8==1.4.3
+certifi==2019.3.9
+chardet==3.0.4
+defusedxml==0.5.0
+Django==2.1.7
+idna==2.8
+isort==4.3.4
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
+oauthlib==3.0.1
+psycopg2==2.7.7
+pycodestyle==2.5.0
+pylint==2.2.2
+python3-openid==3.1.0
+pytz==2018.9
+requests==2.21.0
+requests-oauthlib==1.2.0
+six==1.12.0
+urllib3==1.24.1
 wrapt==1.11.1
-django-allauth==0.39.1
